# longest-common-repeat

./: Cargo.toml
coloured-trees/: Cargo.toml
coloured-trees/src/: lib.rs  rmq.rs
nthash/: Cargo.toml
nthash/src/: main.rs
rmq/: Cargo.toml
rmq/src/: lib.rs
ssa/: Cargo.toml  justfile
ssa/examples/: sort.rs
ssa/src/: lcr.rs  lib.rs  main.rs  minimizers.rs  rolling_hash.rs
