[package]
name = "ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
coloured-trees.workspace = true
nthash = "0.5.1"
plotters = "0.3.5"
rand = "0.8.5"
rdst = "0.20.11"
[dev-dependencies]
rand = "0.8.5"
